[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["api"]

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
dotenvy = "0.15.7"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }
serde_json = "1.0.143"
hyper = { version = "1.7.0", features = ["full"] }
